--- a/starting-code/vite-starting-code/package.json
+++ b/starting-code/vite-starting-code/package.json
@@ -7,7 +7,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "vite": "^6.2.2"
   }
 }
