--- a/starting-code/vite-starting-code/package.json
+++ b/starting-code/vite-starting-code/package.json
@@ -2,7 +2,11 @@
   "name": "vacation-destinations",
   "version": "1.0.0",
   "description": "Vite project code for Learn Build Tools course on Codecademy",
-  "scripts": {},
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
